# magnolia

./: .gitignore  AGENTS.md  Cargo.toml  LIVE_CAPTIONS_README.md  README.md  add_mouse_handlers.py  add_mouse_pressed.py  patch_main.py
.cargo/: config.toml
.github/workflows/: ci.yml
apps/asr_test/: Cargo.toml  build.rs
apps/asr_test/src/: dataset.rs  gpu_telemetry.rs  infer.rs  main.rs  wer.rs
apps/caption_demo/: Cargo.toml
apps/caption_demo/src/: main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: input.rs  layout.rs  layout_editor.rs  main.rs  modal.rs  module_picker.rs  patch_visualizer.rs  signal_handler.rs  theme.rs
apps/daemon/src/tiles/: astrology.rs  audio_vis.rs  caption.rs  clock.rs  compositor.rs  gpu_renderer.rs  kamea.rs  mod.rs  schema_tile.rs  system_monitor.rs  text_input.rs
apps/daemon/src/ui/: controls.rs  fullscreen_modal.rs  mod.rs  modals.rs  patch_bay.rs  schema.rs  settings.rs
apps/parakeet_stt_demo/: Cargo.toml
apps/parakeet_stt_demo/src/: main.rs
apps/stt_bench/: Cargo.toml
apps/stt_bench/src/: main.rs
assets/fonts/: glyph_map.toml
config/: magnolia.env.example  transcription.toml
configs/: glyph_tweaks.toml  layout.toml
core/: Cargo.toml
core/src/: adapters.rs  audio_frame.rs  lib.rs  patch_bay.rs  plugin_adapter.rs  plugin_loader.rs  plugin_manager.rs  plugin_signing.rs  ring_buffer.rs  runtime.rs  sandbox.rs  shared_data.rs  tile.rs
core/src/host/: mod.rs  module_handle.rs
core/src/resources/: buffer_pool.rs  gpu_map.rs
core/tests/: plugin_tests.rs
crates/aphrodite/: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  build.rs
crates/aphrodite/benches/: aspect_bench.rs  ephemeris_bench.rs
crates/aphrodite/src/: lib.rs  source.rs  tile.rs
crates/aphrodite/src/aspects/: calculator.rs  mod.rs  types.rs
crates/aphrodite/src/chart/: animation.rs  data.rs  mod.rs  radix.rs  settings.rs  transit.rs
crates/aphrodite/src/ephemeris/: adapter.rs  mod.rs  types.rs
crates/aphrodite/src/layout/: assembler.rs  loader.rs  mod.rs  rings.rs  types.rs
crates/aphrodite/src/rendering/: generator.rs  glyphs.rs  mod.rs  primitives.rs  spec.rs  tweaks.rs  visual_config.rs
crates/aphrodite/src/vedic/: dashas.rs  mod.rs  nakshatra.rs  types.rs  vargas.rs  yogas.rs
crates/aphrodite/src/western/: decans.rs  dignities.rs  mod.rs  rulers.rs  types.rs
crates/aphrodite/tests/: aspect_tests.rs  ephemeris_tests.rs  layout_tests.rs  rendering_tests.rs
crates/aphrodite/tests/precision/: ephemeris_precision.rs
crates/aphrodite/tests/vedic/: dasha_tests.rs  nakshatra_tests.rs  varga_tests.rs  yoga_tests.rs
crates/aphrodite/tests/western/: decans_tests.rs  dignities_tests.rs
crates/audio_dsp/: Cargo.toml
crates/audio_dsp/src/: lib.rs  tile.rs
crates/audio_input/: Cargo.toml
crates/audio_input/src/: input_tile.rs  lib.rs  realtime.rs  settings.rs  source.rs  tile.rs  viz_sink.rs
crates/audio_input/src/backend/: cpal.rs  mod.rs  pipewire.rs
crates/audio_output/: Cargo.toml
crates/audio_output/src/: lib.rs  settings.rs  tile.rs
crates/audio_output/src/backend/: cpal.rs  mod.rs  pipewire.rs
crates/audio_replay/: Cargo.toml
crates/audio_replay/src/: lib.rs
crates/caption_state/: Cargo.toml
crates/caption_state/src/: lib.rs
crates/kamea/: Cargo.toml
crates/kamea/src/: generator.rs  lib.rs  sink.rs  tile.rs
crates/logos/: Cargo.toml
crates/logos/src/: lib.rs  source.rs  tile.rs
crates/magnolia-config/: Cargo.toml
crates/magnolia-config/src/: lib.rs
crates/magnolia-module-api/: Cargo.toml
crates/magnolia-module-api/src/: lib.rs
crates/magnolia-plugin-abi/: Cargo.toml
crates/magnolia-plugin-abi/src/: lib.rs
crates/magnolia-plugin-helper/: Cargo.toml
crates/magnolia-plugin-helper/src/: lib.rs
crates/magnolia-signals/: Cargo.toml
crates/magnolia-signals/src/: lib.rs  ring_buffer.rs
crates/magnolia-ui/: Cargo.toml
crates/magnolia-ui/src/: lib.rs  tweaks.rs
crates/parakeet_stt/: CONTRACT.md  Cargo.toml
crates/parakeet_stt/src/: lib.rs  tile.rs  transcription.rs
crates/speech_to_text/: Cargo.toml
crates/speech_to_text/src/: lib.rs  processor.rs  sherpa.rs
crates/talisman-module-api/: Cargo.toml
crates/talisman-module-api/src/: lib.rs
crates/talisman-plugin-abi/: Cargo.toml  README.md
crates/talisman-plugin-abi/src/: lib.rs
crates/talisman-plugin-helper/: Cargo.toml
crates/talisman-plugin-helper/src/: lib.rs
crates/talisman-signals/: Cargo.toml
crates/talisman-signals/src/: lib.rs  ring_buffer.rs
crates/talisman-ui/: Cargo.toml  build.rs
crates/talisman-ui/src/: lib.rs  theme.rs
crates/text_tools/: Cargo.toml
crates/text_tools/src/: lib.rs  save_file.rs  sinks.rs
docs/: MAGNOLIA_REFOUNDATION_PLAN.md  PHASE_0_INVENTORY.md  PROJECT_ORGANIZATION.md  STT_BACKEND_PLAN.md
examples/hello_plugin/: Cargo.toml
examples/hello_plugin/src/: lib.rs
modules/audio_dsp/: Cargo.toml
modules/audio_dsp/src/: lib.rs  tile.rs
modules/audio_input/: Cargo.toml
modules/audio_input/src/: input_tile.rs  lib.rs  source.rs  tile.rs
modules/audio_output/: Cargo.toml
modules/audio_output/src/: lib.rs  settings.rs  tile.rs
scripts/: run_librispeech_bench.sh  setup_librispeech_test_clean.sh  setup_sherpa_captioning.sh
tools/: audio_snapshot.sh  run_stt_debug_suite.sh
