[package]
name = "talisman_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
schemars = "0.8" # For config schema generation
log = "0.4"
tokio = { version = "1.0", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }

