[package]
name = "talisman_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
schemars = "0.8" # For config schema generation
log = "0.4"
tokio = { version = "1.0", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
libloading = "0.8"
dirs = "5.0"
notify = "6.0"
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"
libc = "0.2"

[dependencies.talisman-plugin-abi]
path = "../crates/talisman-plugin-abi"

