[package]
name = "asr_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asr_test"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.5"

magnolia_core = { path = "../../core" }
magnolia_config = { path = "../../crates/magnolia-config" }
audio_replay = { path = "../../crates/audio_replay" }
parakeet_stt = { path = "../../crates/parakeet_stt" }

[dev-dependencies]
tempfile = "3.10"
