[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
nannou = "0.19.0"
sysinfo = { version = "0.37.2", features = ["default"] }
nvml-wrapper = "0.10"

magnolia_core = { path = "../../core", features = ["tile-rendering"] }
magnolia_signals = { path = "../../crates/magnolia-signals" }
aphrodite = { path = "../../crates/aphrodite", features = ["tile-rendering"] }
magnolia-ui = { path = "../../crates/magnolia-ui", features = ["tile-rendering"] }
audio_input = { path = "../../crates/audio_input", features = ["tile-rendering"] }
audio_dsp = { path = "../../crates/audio_dsp", features = ["tile-rendering"] }
audio_output = { path = "../../crates/audio_output", features = ["tile-rendering"] }
parakeet_stt = { path = "../../crates/parakeet_stt", features = ["tile-rendering"] }
magnolia_config = { path = "../../crates/magnolia-config" }
magnolia_module_api = { path = "../../crates/magnolia-module-api" }
# nannou_egui = "0.19.0"
toml = "0.8"
log = "0.4"
env_logger = "0.10"
arboard = "3.2"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
