[package]
name = "aphrodite"
version = "0.1.0"
edition = "2021"
authors = ["Gaia Tools"]
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
swisseph = "^0.1"
talisman_core = { path = "../../core" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ephemeris_bench"
harness = false

[[bench]]
name = "aspect_bench"
harness = false
