[package]
name = "aphrodite"
version = "0.1.0"
edition = "2021"
authors = ["Gaia Tools"]
license = "AGPL-3.0-or-later"

[features]
default = []
tile-rendering = ["talisman_core/tile-rendering", "dep:nannou"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
swisseph = "^0.1"
talisman_core = { path = "../../core" }
talisman_signals = { path = "../../crates/talisman-signals" }
talisman-plugin-helper = { path = "../talisman-plugin-helper" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
regex = "1"

# Optional rendering dependencies
nannou = { version = "0.19", optional = true }
# nannou_egui removed
toml = "0.8"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ttf-parser = "0.20"

[[bench]]
name = "ephemeris_bench"
harness = false

[[bench]]
name = "aspect_bench"
harness = false
