[package]
name = "audio_input"
version = "0.1.0"
edition = "2021"

[features]
default = []
tile-rendering = ["talisman_core/tile-rendering", "dep:nannou", "dep:rustfft"]

[lib]
crate-type = ["rlib"]

[dependencies]
talisman_signals = { path = "../talisman-signals" }
talisman_core = { path = "../../core" }
talisman-ui = { path = "../talisman-ui", features = ["tile-rendering"] }
log = "0.4"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
nannou = { version = "0.19", optional = true }
# nannou_egui = "0.19.0"
tokio = { version = "1.0", features = ["time"] }
rustfft = { version = "6.2", optional = true }

# Removed: talisman-plugin-helper, talisman-core (to avoid circular deps if possible, though host uses core)
# We rely on talisman-module-api and talisman-signals for shared types.

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9.2"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.15"
