[package]
name = "audio_input"
version = "0.1.0"
edition = "2021"

[features]
default = []
tile-rendering = ["magnolia_core/tile-rendering", "dep:nannou", "dep:rustfft"]

[lib]
crate-type = ["rlib"]

[dependencies]
magnolia_signals = { path = "../magnolia-signals" }
magnolia_core = { path = "../../core" }
magnolia-ui = { path = "../magnolia-ui", features = ["tile-rendering"] }
log = "0.4"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
nannou = { version = "0.19", optional = true }
# nannou_egui = "0.19.0"
tokio = { version = "1.0", features = ["time"] }
rustfft = { version = "6.2", optional = true }

# Removed: magnolia-plugin-helper, magnolia_core (to avoid circular deps if possible, though host uses core)
# We rely on magnolia-module-api and magnolia-signals for shared types.

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9.2"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.15"
