[package]
name = "audio_output"
version = "0.1.0"
edition = "2021"

[features]
default = []
tile-rendering = ["talisman_core/tile-rendering", "dep:nannou"]

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cpal = "0.15"
log = "0.4"
talisman_core = { path = "../../core" }
talisman_signals = { path = "../talisman-signals" }
talisman-ui = { path = "../talisman-ui", features = ["tile-rendering"] }
nannou = { version = "0.19", optional = true }
# nannou_egui = "0.19.0"
serde_json = "1.0"
