[package]
name = "audio_output"
version = "0.1.0"
edition = "2021"

[features]
default = []
tile-rendering = ["magnolia_core/tile-rendering", "dep:nannou"]

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
magnolia_core = { path = "../../core" }
magnolia_signals = { path = "../magnolia-signals" }
magnolia-ui = { path = "../magnolia-ui", features = ["tile-rendering"] }
nannou = { version = "0.19", optional = true }
# nannou_egui = "0.19.0"
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9.2"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.15"
