[package]
name = "kamea"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
talisman_core = { path = "../../core", features = ["tile-rendering"] }
talisman-plugin-helper = { path = "../../crates/talisman-plugin-helper" }
async-trait = "0.1"
log = "0.4"

# Rendering
nannou = "0.19"
nannou_egui = "0.19"
