[package]
name = "kamea"
version = "0.1.0"
edition = "2021"

[features]
default = []
tile-rendering = ["talisman_core/tile-rendering", "dep:nannou"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
talisman_core = { path = "../../core" }
talisman-plugin-helper = { path = "../../crates/talisman-plugin-helper" }
talisman-ui = { path = "../../crates/talisman-ui", features = ["tile-rendering"] }
async-trait = "0.1"
log = "0.4"

# Rendering
nannou = { version = "0.19", optional = true }
# nannou_egui removed
