[package]
name = "logos"
version = "0.1.0"
edition = "2021"

[features]
default = []
tile-rendering = ["magnolia_core/tile-rendering", "dep:nannou"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
magnolia_core = { path = "../../core" }
magnolia-plugin-helper = { path = "../magnolia-plugin-helper" }
crossbeam-channel = "0.5" # Better mpsc


# Optional rendering dependencies
nannou = { version = "0.19", optional = true }
# nannou_egui removed
