[package]
name = "text_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
talisman_core = { path = "../../core" }
async-trait = "0.1"
regex = "1.10"
log = "0.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util"] }
hound = "3.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
