[package]
name = "text_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
magnolia_core = { path = "../../core" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "fs", "io-util"] }
regex = "1.10"
log = "0.4"
hound = "3.5"

